<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">One</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Log</string>
    <string name="title_notifications">Auto</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_open">"Open"</string>
    <string name="menu_close">"Close"</string>
    <string name="contentDescriptionNoAction">No action. It is just a symbol.</string>
    <string name="forgot_your">Forgot Your</string>
    <string name="password">Password ?</string>
    <string name="forgotPasswordComment1">We just need your registered email address</string>
    <string name="forgotPasswordComment0">That\'s OK…</string>
    <string name="forgotPasswordComment2">to send you a link to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="signupLinkComment">Don\'t Have an Account ? Signup Now !</string>
    <string name="quote1">\" Energy Conservation is the Foundation of Energy Independence \"</string>
    <string name="quote1Author">- Tom Allen</string>
    <string name="xiotas_solar_drayer_automation_project">… … Xiotas Solar Drayer Automation Project … …</string>
    <string name="from_the_house_of_xiotas">From the House of Xiotas</string>
    <string name="hello">Hello,</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="save_energy_by_automation">Save Energy by Automation</string>
    <string name="login">Login</string>
    <string name="please_login_to_continue">Please Login to Continue</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="loginCap">LOGIN</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account_create_now">Don\'t have an account ? Create now !</string>
    <string name="signup_now">Signup Now</string>
    <string name="quote2">\" The Easiest Way to Save Money is to Waste Less Energy \"</string>
    <string name="quote2author">- Barack Obama</string>
    <string name="welcome1">Welcome!</string>
    <string name="signup_to_start_automation">SignUp to Start Automation !</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_should_not_be_your_e_mail_password">*Password should not be your e-mail password</string>
    <string name="signup">SIGNUP</string>
    <string name="already_have_an_account_login_here">Already Have an Account ? Login Here !</string>
    <string name="thanks_for_choosing_xiotas_app">Thanks for choosing Xiotas app</string>
    <string name="quote3">\" The Greatest Threat to Our Planet is the Belief That Someone Else Will Save It \"</string>
    <string name="quote3Author">- Robert Swan</string>
    <string name="xiotas">XIOTAS</string>
    <string name="handcrafted_in_india">HandCrafted in India</string>
    <string name="xiotas_small">Xiotas</string>
    <string name="hey_there">HEY There !</string>
    <string name="dryer_room_1">Dryer Room 1</string>
    <string name="sixdash">------</string>
    <string name="tempdash">--.-*C</string>
    <string name="humdash">--%</string>
    <string name="fan1" tools:ignore="Typos">Fan1</string>
    <string name="valve1" tools:ignore="Typos">Valve1</string>
    <string name="fivedash">-----</string>
    <string name="last_updated_on">Last updated on</string>
    <string name="datedash">-- --- ---- --:-- --</string>
    <string name="dryer_room_2">Dryer Room 2</string>
    <string name="fan2">Fan2</string>
    <string name="valve2">Valve2</string>
    <string name="outside">Outside</string>
    <string name="water_pump">Water Pump</string>
    <string name="crafted_with">Crafted with</string>
    <string name="by_xiotas">by XIOTAS</string>
    <string name="developed_by">Developed by</string>
    <string name="yadukrishnan_k_m">YADUKRISHNAN K M</string>
</resources>