<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/loginCard1Linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/hello"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginCard1Linearlayout1Text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/welcome_back"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_energy_by_automation"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/loginCard1Linearlayout1Text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginCard1Linearlayout1Text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/please_login_to_continue"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/loginCard1Linearlayout1Edittext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#0027FF"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/loginCard1Linearlayout1Edittext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#0044FF"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:autofillHints="password" />

            <TextView
                android:id="@+id/loginCard1Linearlayout1Text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:paddingEnd="30dp"
                android:paddingStart="50dp"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="#0044FF"
                android:focusable="true" />

            <Button
                android:id="@+id/loginCard1Linearlayout1Button1"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/loginCap"
                app:cornerRadius="25dp" />

            <LinearLayout
                android:id="@+id/loginCard1Linearlayout1Linearlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/loginCard1Linearlayout1Linearlayout1Divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/loginCard1Linearlayout1Linearlayout1Text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:text="@string/or" />

                <View
                    android:id="@+id/loginCard1Linearlayout1Linearlayout1Divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

            <TextView
                android:id="@+id/loginCard1Linearlayout1Text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/continue_with_google"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#0245FF"
                android:textSize="16sp"
                android:focusable="true" />

            <ImageView
                android:id="@+id/loginCard1Linearlayout1Image1"
                android:layout_width="52dp"
                android:layout_height="41dp"
                app:srcCompat="@mipmap/ic_google_foreground"
                android:contentDescription="@string/contentDescriptionNoAction" />

            <TextView
                android:id="@+id/loginCard1Linearlayout1Text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:text="@string/don_t_have_an_account_create_now"
                android:textAlignment="center"
                android:focusable="true" />

            <Button
                android:id="@+id/loginCard1Linearlayout1Button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/signup_now"
                app:cornerRadius="25dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quote2"
                android:textAlignment="center"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quote2author"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/loginCard1Linearlayout1Text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/xiotas_solar_drayer_automation_project"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/from_the_house_of_xiotas"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>