<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">


        <LinearLayout
            android:id="@+id/signupLinearlayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/signupLinearlayout1Text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/welcome1"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signupLinearlayout1Text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/signup_to_start_automation"
                android:textAlignment="center" />


            <EditText
                android:id="@+id/signupLinearlayout1Card1Linearlayout1EditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#0026FF"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:autofillHints="name" />

            <EditText
                android:id="@+id/signupLinearlayout1Card1Linearlayout1Edittext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#0026FF"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress" />

            <EditText
                android:id="@+id/signupLinearlayout1Card1Linearlayout1Edittext3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#0026FF"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:autofillHints="password" />

            <EditText
                android:id="@+id/signupLinearlayout1Card1Linearlayout1Edittext4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:backgroundTint="#0026FF"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:autofillHints="password" />

            <TextView
                android:id="@+id/signupLinearlayout1Card1Linearlayout1Text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/password_should_not_be_your_e_mail_password"
                android:textAlignment="center" />

            <Button
                android:id="@+id/signupLinearlayout1Card1Linearlayout1Button1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/signup"
                app:cornerRadius="25dp" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:clickable="true"
                android:text="@string/already_have_an_account_login_here"
                android:textAlignment="center"
                android:textColor="#0044FF"
                android:focusable="true" />

            <TextView
                android:id="@+id/signupLinearlayout1Text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thanks_for_choosing_xiotas_app"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:text="@string/quote3"
                android:textAlignment="center"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quote3Author"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/xiotas_solar_drayer_automation_project"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/signupLinearlayout1Text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="60dp"
                android:text="@string/from_the_house_of_xiotas"
                android:textAlignment="center"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>