<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardviewgradient">

    <ImageView
        android:id="@+id/spalsh_hand"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_soalash_screen_background"
        android:contentDescription="@string/contentDescriptionNoAction" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/spalsh_logo"
            android:layout_width="304dp"
            android:layout_height="65dp"
            android:layout_marginTop="90dp"
            app:srcCompat="@drawable/ic_app_icon2"
            android:contentDescription="@string/contentDescriptionNoAction" />

        <TextView
            android:id="@+id/spalsh_name"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/xiotas"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/spalsh_bottom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/clicker_script"
            android:text="@string/handcrafted_in_india"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>